--- a/css/catalog.scss
+++ b/css/catalog.scss
@@ -402,9 +402,11 @@ img {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
+    
 
     &.for_catalog {
         padding-top: 664px;
+        padding-bottom: 128px;
     }
 }
 
