--- a/css/product_presentation.css
+++ b/css/product_presentation.css
@@ -36,6 +36,11 @@ img {
   padding-right: calc(50% - 563px);
 }
 
+.center_spec {
+  padding-left: calc(50% - 558px);
+  padding-right: calc(50% - 558px);
+}
+
 .fixation {
   position: fixed;
   z-index: 44;
@@ -92,27 +97,28 @@ img {
 
 /* menu */
 .for_menu {
-  overflow: hidden scroll;
+  overflow: hidden;
   position: absolute;
+  z-index: 44;
   right: 0;
-  top: 79px;
+  top: 75px;
   transition: all 0.5s;
-  width: 100vw;
-  height: 100vh;
   box-shadow: #696868;
-  display: none;
+  height: 634px;
+  min-width: 232px;
+  right: -252px;
+  box-shadow: 16px 4px 35px 0px rgba(0, 0, 0, 0.2117647059);
 }
 
 .header_menu {
   background-color: white;
   display: flex;
   flex-direction: column;
-  height: 634px;
   position: absolute;
+  z-index: 46;
   right: 0;
   top: 0;
   width: 232px;
-  box-shadow: 0 14px 28px rgba(80, 79, 79, 0.25), 0 10px 10px rgba(71, 71, 71, 0.22);
 }
 .header_menu__title {
   color: #000;
@@ -144,6 +150,15 @@ img {
   line-height: normal;
   margin-bottom: 11px;
   padding-left: 54px;
+}
+
+#burger {
+  position: absolute;
+  left: 10000000000000000px;
+  visibility: hidden;
+}
+#burger:checked ~ .for_menu {
+  right: 0;
 }
 
 .special_img_link:hover + .for_menu {
@@ -192,99 +207,126 @@ img {
   text-align: left;
 }
 
-.catalog_main_content {
-  position: relative;
-}
-.catalog_main_content__description_part {
-  position: absolute;
-  opacity: 1;
-  top: 690px;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  max-width: 1126px;
-  padding-top: 64.5px;
-  padding-bottom: 64.5px;
+.filtering_and_selection {
+  height: 132px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-color: white;
-  border: 1px solid #EAEAEA;
-}
-.catalog_main_content__description_part a {
-  color: #F16D7F;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-}
-.catalog_main_content__description_part h3 {
-  color: #4D4D4D;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-}
-.catalog_main_content__description_part__shortline {
-  margin-top: 12px;
-  margin-bottom: 12px;
-}
-.catalog_main_content__description_part__subtitle {
-  margin-top: 28.5px;
-  margin-bottom: 32px;
-  color: #5E5E5E;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-  max-width: 566px;
-}
-.catalog_main_content__description_part h1 {
-  color: #F16D7F;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-}
-.catalog_main_content__description_part hr {
-  margin-top: 65px;
-  width: 641px;
-  border: 0;
-  height: 1px;
-  background-color: #EAEAEA;
+  padding-top: 39px;
+  box-sizing: border-box;
 }
 
-.catalog_offer {
-  background-color: #F7F7F7;
-  display: flex;
-  justify-content: center;
-  border: 1px solid #EAEAEA;
+.filter {
+  width: 355px;
+  position: relative;
+  padding-top: 13px;
+  box-sizing: border-box;
+  z-index: 7;
 }
-.catalog_offer.center {
-  padding-left: calc(50% - 558px);
-  padding-right: calc(50% - 558px);
+.filter__content {
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.2117647059);
+  background-color: #FFFFFF;
+  padding-top: 0;
+  padding-left: 16px;
+  padding-bottom: 16px;
+  padding-right: 16px;
+}
+.filter[open] {
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.2117647059);
+  background: #FFFFFF;
+}
+.filter[open] .filter__head {
+  color: #F16D7F;
+}
+.filter[open] path {
+  fill: #F16D7F;
+}
+.filter__head {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-left: 16px;
+}
+.filter__item {
+  margin-top: 16px;
+}
+.filter__bag_head {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border-bottom: 1px solid #EBEBEB;
+  padding: 8px 11px 11px 11px;
+  border-left: 5px solid #F16D7F;
+}
+.filter__item[open] .filter__bag_head {
+  color: #F16D7F;
+}
+.filter__link_bag {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.filter__link {
+  color: #6F6E6E;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.filter__link:hover {
+  color: #F16D7F;
 }
 
 .offer_details {
   display: flex;
-  justify-content: center;
-  gap: 23px;
+  margin-left: 30px;
+  gap: 16px;
 }
 .offer_details__choose {
   text-align: left;
-  margin-top: 65px;
-  margin-bottom: 48px;
+  padding-top: 13px;
+  padding-bottom: 64px;
+  position: relative;
+  z-index: 7;
+}
+.offer_details__choose_box {
+  position: absolute;
+  top: 35px;
+  left: -9px;
+  box-sizing: border-box;
+  background: #FFF;
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+  padding-left: 9px;
+  padding-bottom: 2px;
+  padding-top: 9px;
+  padding-right: 14px;
 }
 .offer_details__lists {
   position: absolute;
   z-index: -1;
   opacity: 0;
 }
-.offer_details__choose > summary > img {
-  margin-left: 5px;
+.offer_details__head {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #6F6E6E;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 .offer_details__choose > summary {
   list-style: none;
@@ -295,11 +337,11 @@ img {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+  margin-bottom: 9px;
 }
 .offer_details__lists + label::before {
   content: "";
   display: inline-block;
-  margin-left: 10px;
   width: 1em;
   height: 1em;
   flex-shrink: 0;
@@ -316,26 +358,30 @@ img {
   background-color: #F16D7F;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
-
-.button_bask {
-  display: flex;
-  align-items: center;
-  background: none;
-  border: 1px solid #F16D7F;
-}
-.button_bask__title {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-right: 57px;
+.offer_details__lists:checked + label {
   color: #F16D7F;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
 }
-.button_bask__basket {
-  padding-left: 24px;
-  margin-right: 23px;
+
+.offer_details__slider {
+  -webkit-appearance: none;
+  width: 100px;
+  height: 10px;
+  background-color: #F8F3F4;
+  outline: none;
+}
+
+.offer_details__choose_box.specl {
+  padding-bottom: 11px;
+}
+
+.offer_details__slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: #F16D7F;
+  cursor: pointer;
+  border-radius: 50%;
 }
 
 /* content_items */
@@ -344,11 +390,6 @@ img {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 30px;
 }
-.content_items.for_catalog {
-  padding-top: 664px;
-  padding-bottom: 128px;
-}
-
 .content_bgc {
   background-color: #F8F8F8;
 }
@@ -426,6 +467,92 @@ img {
   opacity: 1;
   top: 44%;
   left: 32%;
+}
+
+.product_switch {
+  margin-top: 48px;
+  margin-bottom: 96px;
+}
+
+.product_switch__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 16px;
+  border: 1px solid #EBEBEB;
+  width: 285px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.product_switch__list input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+}
+.product_switch__list__numbers {
+  display: flex;
+  gap: 14px;
+  color: #C4C4C4;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.product_switch__list__line_span {
+  display: flex;
+  margin-left: 14px;
+  margin-right: 14px;
+}
+.product_switch__list__numb_colored:hover + label {
+  color: #F16D7F;
+}
+
+/* company_advantages */
+.advantages {
+  background-color: #222224;
+}
+.advantages__item {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 104px;
+  padding-bottom: 103px;
+}
+.advantages__title {
+  color: #FBFBFB;
+  font-size: 19.96px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 16px;
+  font-weight: bold;
+}
+.advantages__subtitle {
+  color: #FBFBFB;
+  font-size: 13.972px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  max-width: 310px;
+}
+.advantages__icon1 {
+  margin-bottom: 28px;
+}
+.advantages__icon2 {
+  margin-bottom: 19px;
+}
+.advantages__icon3 {
+  margin-bottom: 25px;
+}
+
+.middling {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
 }
 
 /* subscription */
@@ -540,4 +667,4 @@ img {
 
 .footer__socials__link:hover .socials__icon2 path {
   fill: #FFF;
-}/*# sourceMappingURL=catalog.css.map */
+}/*# sourceMappingURL=product_presentation.css.map */
