--- a/css/style.css
+++ b/css/style.css
@@ -1,153 +1,478 @@
-* {
-  margin: 0%;
-  padding: 0%;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-body {
-  font-family: "Lato", sans-serif;
-  margin-top: 75px;
-}
-
-.all_content {
-  overflow: hidden;
-}
-
-a {
-  text-decoration: none;
-}
-
-.button_place {
-  position: absolute;
-  opacity: 0;
-}
-
-img {
-  vertical-align: middle;
-  max-width: 100%;
-  height: auto;
-}
-
-.center {
-  padding-left: calc(50% - 563px);
-  padding-right: calc(50% - 563px);
-}
-
-.fixation {
-  position: fixed;
-  z-index: 44;
-  top: 0;
-  width: 100%;
-}
-
-/* header */
-.header {
-  padding-left: calc(50% - 558px);
-  padding-right: calc(50% - 558px);
+.new_arrivals {
   display: flex;
   justify-content: space-between;
-  background-color: #222;
+  background-color: #F8F3F4;
 }
-.header__left_nav {
-  margin-top: 18px;
-  margin-bottom: 19px;
+.new_arrivals.center {
+  padding-left: calc(50% - 558px);
+  padding-right: calc(50% - 558px);
 }
-.header__left_nav__searcher {
-  margin-left: 41px;
+.new_arrivals__title {
+  color: #F16D7F;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.header__right_nav {
+.new_arrivals__bread_crumbs {
   display: flex;
-  margin-top: 26px;
-  margin-bottom: 20px;
+  gap: 5px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding-top: 65px;
+  padding-bottom: 65px;
 }
-.header__right_nav__special_img {
-  padding-top: 4px;
+.new_arrivals__link {
+  color: #636363;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
 }
-.header__right_nav__person_icon {
-  margin-left: 25px;
-  margin-right: 42px;
+.new_arrivals__spec_link {
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
-.basket_shower {
+.catalog_main_content {
   position: relative;
 }
-.basket_shower__counter {
+.catalog_main_content__description_part {
   position: absolute;
-  width: 19px;
-  height: 19px;
-  background-color: #F16D7F;
-  opacity: 6;
-  text-align: center;
-  color: #ffffff;
-  font-size: 12px;
-  font-weight: 700;
-  line-height: 19px;
-  border-radius: 50%;
-  left: 22px;
-  top: -8px;
-}
-
-/* menu */
-.for_menu {
-  overflow: hidden scroll;
-  position: absolute;
+  opacity: 1;
+  top: 690px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
   right: 0;
-  top: 79px;
-  transition: all 0.5s;
-  width: 100vw;
-  height: 100vh;
-  box-shadow: #696868;
-  display: none;
-}
-
-.header_menu {
-  background-color: white;
+  max-width: 1126px;
+  padding-top: 64.5px;
+  padding-bottom: 64.5px;
   display: flex;
   flex-direction: column;
-  height: 634px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 232px;
-  box-shadow: 0 14px 28px rgba(80, 79, 79, 0.25), 0 10px 10px rgba(71, 71, 71, 0.22);
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: white;
+  border: 1px solid #EAEAEA;
 }
-.header_menu__title {
-  color: #000;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-bottom: 24px;
-  padding-left: 34px;
-  padding-top: 37px;
-  text-transform: uppercase;
-  font-weight: bold;
-}
-.header_menu__section {
+.catalog_main_content__description_part a {
   color: #F16D7F;
   font-size: 14px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   line-height: normal;
-  margin-bottom: 12px;
-  padding-left: 33px;
-  text-transform: uppercase;
 }
-.header_menu__section_subtitle {
+.catalog_main_content__description_part h3 {
+  color: #4D4D4D;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.catalog_main_content__description_part__shortline {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+.catalog_main_content__description_part__subtitle {
+  margin-top: 28.5px;
+  margin-bottom: 32px;
+  color: #5E5E5E;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  max-width: 566px;
+}
+.catalog_main_content__description_part h1 {
+  color: #F16D7F;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.catalog_main_content__description_part hr {
+  margin-top: 65px;
+  width: 641px;
+  border: 0;
+  height: 1px;
+  background-color: #EAEAEA;
+}
+
+.catalog_offer {
+  background-color: #F7F7F7;
+  display: flex;
+  justify-content: center;
+  border: 1px solid #EAEAEA;
+}
+.catalog_offer.center {
+  padding-left: calc(50% - 558px);
+  padding-right: calc(50% - 558px);
+}
+
+.offer_details {
+  display: flex;
+  margin-left: 30px;
+  gap: 16px;
+}
+.offer_details__choose {
+  text-align: left;
+  padding-top: 13px;
+  padding-bottom: 64px;
+  position: relative;
+  z-index: 7;
+}
+.offer_details__choose_box {
+  position: absolute;
+  top: 35px;
+  left: -9px;
+  box-sizing: border-box;
+  background: #FFF;
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+  padding-left: 9px;
+  padding-bottom: 2px;
+  padding-top: 9px;
+  padding-right: 14px;
+}
+.offer_details__lists {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.offer_details__head {
+  display: flex;
+  align-items: center;
+  gap: 10px;
   color: #6F6E6E;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-bottom: 11px;
-  padding-left: 54px;
+}
+.offer_details__choose > summary {
+  list-style: none;
+}
+.offer_details__lists + label {
+  display: inline-flex;
+  align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  margin-bottom: 9px;
+}
+.offer_details__lists + label::before {
+  content: "";
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+.offer_details__lists:checked + label::before {
+  border-color: #F16D7F;
+  background-color: #F16D7F;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+.offer_details__lists:checked + label {
+  color: #F16D7F;
 }
 
-.special_img_link:hover + .for_menu {
-  display: block;
+.button_bask {
+  display: flex;
+  align-items: center;
+  background: none;
+  border: 1px solid #F16D7F;
+}
+.button_bask__title {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 57px;
+  color: #F16D7F;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.button_bask__basket {
+  padding-left: 24px;
+  margin-right: 23px;
+}
+
+/* content_items */
+.content_items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+.content_items.for_catalog {
+  padding-top: 664px;
+  padding-bottom: 128px;
+}
+
+.new_arrivals {
+  display: flex;
+  justify-content: space-between;
+  background-color: #F8F3F4;
+}
+.new_arrivals.center {
+  padding-left: calc(50% - 558px);
+  padding-right: calc(50% - 558px);
+}
+.new_arrivals__title {
+  color: #F16D7F;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.new_arrivals__bread_crumbs {
+  display: flex;
+  gap: 5px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding-top: 65px;
+  padding-bottom: 65px;
+}
+.new_arrivals__link {
+  color: #636363;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.new_arrivals__spec_link {
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.filtering_and_selection {
+  height: 132px;
+  display: flex;
+  padding-top: 39px;
+  box-sizing: border-box;
+}
+
+.filter {
+  width: 355px;
+  position: relative;
+  padding-top: 13px;
+  box-sizing: border-box;
+  z-index: 7;
+}
+.filter__content {
+  background-color: #FFFFFF;
+  padding-top: 0;
+  padding-left: 16px;
+  padding-bottom: 16px;
+  padding-right: 16px;
+}
+.filter[open] {
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.2117647059);
+  background: #FFFFFF;
+}
+.filter[open] .filter__head {
+  color: #F16D7F;
+}
+.filter[open] path {
+  fill: #F16D7F;
+}
+.filter__head {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  padding-left: 16px;
+}
+.filter__item {
+  margin-top: 16px;
+}
+.filter__bag_head {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  border-bottom: 1px solid #EBEBEB;
+  padding: 8px 11px 11px 11px;
+  border-left: 5px solid #F16D7F;
+}
+.filter__item[open] .filter__bag_head {
+  color: #F16D7F;
+}
+.filter__link_bag {
+  display: flex;
+  flex-direction: column;
+  gap: 11px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.filter__link {
+  color: #6F6E6E;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.filter__link:hover {
+  color: #F16D7F;
+}
+
+.offer_details {
+  display: flex;
+  margin-left: 30px;
+  gap: 16px;
+}
+.offer_details__choose {
+  text-align: left;
+  padding-top: 13px;
+  padding-bottom: 64px;
+  position: relative;
+  z-index: 7;
+}
+.offer_details__choose_box {
+  position: absolute;
+  top: 35px;
+  left: -9px;
+  box-sizing: border-box;
+  background: #FFF;
+  box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
+  padding-left: 9px;
+  padding-bottom: 2px;
+  padding-top: 9px;
+  padding-right: 14px;
+}
+.offer_details__lists {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.offer_details__head {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #6F6E6E;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.offer_details__choose > summary {
+  list-style: none;
+}
+.offer_details__lists + label {
+  display: inline-flex;
+  align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  margin-bottom: 9px;
+}
+.offer_details__lists + label::before {
+  content: "";
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+.offer_details__lists:checked + label::before {
+  border-color: #F16D7F;
+  background-color: #F16D7F;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+.offer_details__lists:checked + label {
+  color: #F16D7F;
+}
+.offer_details__slider {
+  -webkit-appearance: none;
+  width: 100px;
+  height: 10px;
+  background-color: #F8F3F4;
+  outline: none;
+}
+.offer_details__choose_box.specl {
+  padding-bottom: 11px;
+}
+.offer_details__slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background-color: #F16D7F;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.product_switch {
+  margin-top: 48px;
+  margin-bottom: 96px;
+}
+
+.product_switch__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px 16px;
+  border: 1px solid #EBEBEB;
+  width: 285px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.product_switch__list input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+}
+.product_switch__list__numbers {
+  display: flex;
+  gap: 14px;
+  color: #C4C4C4;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.product_switch__list__line_span {
+  display: flex;
+  margin-left: 14px;
+  margin-right: 14px;
+}
+.product_switch__list__numb_colored:hover + label {
+  color: #F16D7F;
 }
 
 /* top */
@@ -441,7 +766,7 @@ img {
 
 /* subscription */
 .subscription {
-  background: url(./img/photo_subscribe.jpg) no-repeat;
+  background: url(../img/photo_subscribe.jpg) no-repeat;
   background-position: 50%;
   background-size: cover;
   height: 448px;
@@ -518,39 +843,6 @@ img {
   font-weight: 400;
   line-height: normal;
   border: none;
-}
-
-/* footer */
-.footer {
-  background-color: #222224;
-  display: flex;
-  justify-content: space-between;
-  padding-left: calc(50% - 538.5px);
-  padding-right: calc(50% - 533.5px);
-  align-items: center;
-}
-.footer__all_rights {
-  color: #FBFBFB;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-.footer__socials {
-  padding-top: 24px;
-  padding-bottom: 23px;
-}
-.footer__socials__link {
-  margin-right: 3px;
-  transition: all 0.3s;
-}
-
-.footer__socials__link:hover .socials__icon1 path {
-  fill: #F16D7F;
-}
-
-.footer__socials__link:hover .socials__icon2 path {
-  fill: #FFF;
 }
 
 /* TABLET */
@@ -902,4 +1194,199 @@ img {
   line-height: 17px;
   letter-spacing: 0em;
   text-align: left;
-}/*# sourceMappingURL=index.css.map */
+}
+
+* {
+  margin: 0%;
+  padding: 0%;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  margin-top: 75px;
+}
+
+.all_content {
+  overflow: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+.button_place {
+  position: absolute;
+  opacity: 0;
+}
+
+img {
+  vertical-align: middle;
+  max-width: 100%;
+  height: auto;
+}
+
+.center {
+  padding-left: calc(50% - 563px);
+  padding-right: calc(50% - 563px);
+}
+
+.fixation {
+  position: fixed;
+  z-index: 44;
+  top: 0;
+  width: 100%;
+}
+
+/* header */
+.header {
+  padding-left: calc(50% - 558px);
+  padding-right: calc(50% - 558px);
+  display: flex;
+  justify-content: space-between;
+  background-color: #222;
+}
+.header__left_nav {
+  margin-top: 18px;
+  margin-bottom: 19px;
+}
+.header__left_nav__searcher {
+  margin-left: 41px;
+}
+.header__right_nav {
+  display: flex;
+  margin-top: 26px;
+  margin-bottom: 20px;
+}
+.header__right_nav__special_img {
+  padding-top: 4px;
+}
+.header__right_nav__person_icon {
+  margin-left: 25px;
+  margin-right: 42px;
+}
+
+.basket_shower {
+  position: relative;
+}
+.basket_shower__counter {
+  position: absolute;
+  width: 19px;
+  height: 19px;
+  background-color: #F16D7F;
+  opacity: 6;
+  text-align: center;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 19px;
+  border-radius: 50%;
+  left: 22px;
+  top: -8px;
+}
+
+/* menu */
+.for_menu {
+  overflow: hidden;
+  position: absolute;
+  z-index: 44;
+  right: 0;
+  top: 75px;
+  transition: all 0.5s;
+  box-shadow: #696868;
+  height: 634px;
+  min-width: 232px;
+  right: -252px;
+  box-shadow: 16px 4px 35px 0px rgba(0, 0, 0, 0.2117647059);
+  background-color: white;
+}
+
+.header_menu {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 46;
+  right: 0;
+  top: 0;
+  width: 232px;
+}
+.header_menu__title {
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 24px;
+  padding-left: 34px;
+  padding-top: 37px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.header_menu__section {
+  color: #F16D7F;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 12px;
+  padding-left: 33px;
+  text-transform: uppercase;
+}
+.header_menu__section_subtitle {
+  color: #6F6E6E;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 11px;
+  padding-left: 54px;
+}
+
+#burger {
+  position: absolute;
+  left: 10000000000000000px;
+  visibility: hidden;
+}
+#burger:checked ~ .for_menu {
+  right: 0;
+}
+
+.special_img_link:hover + .for_menu {
+  display: block;
+}
+
+/* footer */
+.footer {
+  background-color: #222224;
+  display: flex;
+  justify-content: space-between;
+  padding-left: calc(50% - 538.5px);
+  padding-right: calc(50% - 533.5px);
+  align-items: center;
+}
+.footer__all_rights {
+  color: #FBFBFB;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.footer__socials {
+  padding-top: 24px;
+  padding-bottom: 23px;
+}
+.footer__socials__link {
+  margin-right: 3px;
+  transition: all 0.3s;
+}
+
+.footer__socials__link:hover .socials__icon1 path {
+  fill: #F16D7F;
+}
+
+.footer__socials__link:hover .socials__icon2 path {
+  fill: #FFF;
+}/*# sourceMappingURL=style.css.map */
