--- a/css/_catalog.scss
+++ b/css/_catalog.scss
@@ -1,3 +1,5 @@
+@import 'vars';
+@import 'mixins';
 //                            arrivals
 
 
@@ -10,14 +12,14 @@
         padding-left: calc(50% - 558px);
         padding-right: calc(50% - 558px);
     }
-    
-    &__title { 
+
+    &__title {
         color: $mainElementsColor;
         padding-top: 60px;
         padding-bottom: 60px;
     }
 
-    &__bread_crumbs{
+    &__bread_crumbs {
         display: flex;
         gap: 5px;
         font-size: 14px;
@@ -26,9 +28,9 @@
         letter-spacing: 0em;
         text-align: left;
         padding-top: 65px;
-        padding-bottom: 65px;  
+        padding-bottom: 65px;
     }
-    
+
     &__link {
         color: #636363;
         font-size: 14px;
@@ -37,28 +39,34 @@
         letter-spacing: 0em;
         text-align: left;
 
+        &::after {
+            content: '/';
+            padding-left: 6px;
+        }
 
+        &:last-child {
+            color: $mainElementsColor;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 17px;
+            letter-spacing: 0em;
+            text-align: left;
+        }
+
+        &:last-child::after {
+            content: none;
+        }
     }
-
-    &__spec_link {
-        color: $mainElementsColor;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 17px;
-        letter-spacing: 0em;
-        text-align: left;       
-    }
-
 }
 
 //                        main_content
 
 
 
-.catalog_main_content {  
+.catalog_main_content {
     position: relative;
-    
-    &__description_part {  
+
+    &__description_part {
         position: absolute;
         opacity: 1;
         top: 690px;
@@ -75,7 +83,7 @@
         align-items: center;
         text-align: center;
         background-color: white;
-        border: 1px solid #EAEAEA; 
+        border: 1px solid #EAEAEA;
 
         & a {
             color: #F16D7F;
@@ -84,7 +92,7 @@
             font-weight: 300;
             line-height: normal;
         }
-        
+
         & h3 {
             color: #4D4D4D;
             font-size: 18px;
@@ -133,7 +141,7 @@
     display: flex;
     justify-content: center;
     border: 1px solid #EAEAEA;
-    
+
 
     &.center {
         padding-left: calc(50% - 558px);
@@ -142,10 +150,12 @@
 }
 
 
+.for_absoluting {
+    position: relative;
+}
 
 .offer_details {
     display: flex;
-    margin-left: 30px;
     gap: 16px;
 
     &__choose {
@@ -154,13 +164,13 @@
         padding-bottom: 64px;
         position: relative;
         z-index: 7;
-      }
+        cursor: pointer;
+    }
 
     &__choose_box {
         position: absolute;
         top: 35px;
         left: -9px;
-        box-sizing: border-box;
         background: #FFF;
         box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
         padding-left: 9px;
@@ -172,7 +182,7 @@
     &__lists {
         position: absolute;
         z-index: -1;
-        opacity: 0;    
+        opacity: 0;
     }
 
     &__head {
@@ -186,22 +196,22 @@
         line-height: normal;
     }
 
-    &__choose > summary {
+    &__choose>summary {
         list-style: none;
-      }
+    }
 
-    &__lists + label {
+    &__lists+label {
         display: inline-flex;
         align-items: center;
         user-select: none;
         margin-bottom: 9px;
-      }
-    
-    &__lists + label::before {
+    }
+
+    &__lists+label::before {
         content: '';
         display: inline-block;
         width: 1em;
-        height: 1em;  
+        height: 1em;
         flex-shrink: 0;
         flex-grow: 0;
         border: 1px solid #adb5bd;
@@ -210,55 +220,85 @@
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 50% 50%;
-    }  
-
-    &__lists:checked + label::before {
-    border-color: $mainElementsColor;
-    background-color: $mainElementsColor;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");  
     }
-    
-    &__lists:checked + label {
-    color: $mainElementsColor; 
+
+    &__lists:checked+label::before {
+        border-color: $mainElementsColor;
+        background-color: $mainElementsColor;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+    }
+
+    &__lists:checked+label {
+        color: $mainElementsColor;
     }
 
 }
 
 
-// test
+// add_to_card boutton
+
+.button {
+    &__bask {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background: none;
+        border: 1px solid $mainElementsColor;
+        width: 212px;
+        height: 49px;
+
+        &:hover {
+            background-color: $mainElementsColor;
+
+            & .button__bask__title {
+                color: #FFF;
+            }
+
+            & .button__bask__basket path {
+                fill: #FFF;
+            }
+        }
+
+        &:active {
+            background-color: #fff;
+            border: 1px solid $mainElementsColor;
+
+            & .button__bask__title {
+                color: $mainElementsColor;
+                ;
+            }
+
+            & .button__bask__basket path {
+                fill: $mainElementsColor;
+            }
+        }
 
 
-.button_bask {
-    display: flex;
-    align-items: center;
-    background: none;
-    border: 1px solid $mainElementsColor;
+        &__title {
+            padding-right: 54px;
+            color: $mainElementsColor;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
 
-    &__title {
-        padding-top: 15px;
-        padding-bottom: 15px;
-        padding-right: 57px;
-        color: $mainElementsColor;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
+        }
 
-    }
-    &__basket {
-        padding-left: 24px;
-        margin-right: 23px;       
+        &__basket {
+            margin-left: 24px;
+
+        }
     }
 }
 
 
 /* content_items */
 
-.content_items{
+.content_items {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
-    
+
     &.for_catalog {
         padding-top: 664px;
         padding-bottom: 128px;
