--- a/css/_product_presentation.scss
+++ b/css/_product_presentation.scss
@@ -1,4 +1,5 @@
-
+@import 'vars';
+@import 'mixins';
 
 //                            arrivals
 
@@ -11,14 +12,14 @@
         padding-left: calc(50% - 558px);
         padding-right: calc(50% - 558px);
     }
-    
-    &__title { 
+
+    &__title {
         color: $mainElementsColor;
         padding-top: 60px;
         padding-bottom: 60px;
     }
 
-    &__bread_crumbs{
+    &__bread_crumbs {
         display: flex;
         gap: 5px;
         font-size: 14px;
@@ -27,9 +28,9 @@
         letter-spacing: 0em;
         text-align: left;
         padding-top: 65px;
-        padding-bottom: 65px;  
+        padding-bottom: 65px;
     }
-    
+
     &__link {
         color: #636363;
         font-size: 14px;
@@ -38,19 +39,25 @@
         letter-spacing: 0em;
         text-align: left;
 
+        &::after {
+            content: '/';
+            padding-left: 6px;
+        }
 
+
+        &:last-child {
+            color: $mainElementsColor;
+            font-size: 14px;
+            font-weight: 700;
+            line-height: 17px;
+            letter-spacing: 0em;
+            text-align: left;
+        }
+
+        &:last-child::after {
+            content: none;
+        }
     }
-
-    &__spec_link {
-        color: $mainElementsColor;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 17px;
-        letter-spacing: 0em;
-        text-align: left;
-        
-    }
-
 }
 
 
@@ -71,10 +78,10 @@
     width: 355px;
     position: relative;
     padding-top: 13px;
-    box-sizing: border-box;
     z-index: 7;
+    cursor: pointer;
 
-    &__content {   
+    &__content {
         // box-shadow: 6px 4px 35px 0px #00000036;
         background-color: #FFFFFF;
         padding-top: 0;
@@ -84,16 +91,14 @@
     }
 
     &[open] {
-
         box-shadow: 6px 4px 35px 0px #00000036;
         background: #FFFFFF;
 
-
-        & .filter__head{
+        & .filter__head {
             color: $mainElementsColor;
         }
 
-        & path{
+        & path {
             fill: $mainElementsColor;
         }
     }
@@ -129,7 +134,7 @@
         border-left: 5px solid $mainElementsColor;
     }
 
-    &__item[open] .filter__bag_head{
+    &__item[open] .filter__bag_head {
         color: $mainElementsColor;
     }
 
@@ -161,8 +166,11 @@
 
 .offer_details {
     display: flex;
-    margin-left: 30px;
     gap: 16px;
+
+    &.for_product {
+        margin-left: 30px;
+    }
 
     &__choose {
         text-align: left;
@@ -170,17 +178,16 @@
         padding-bottom: 64px;
         position: relative;
         z-index: 7;
-      }
+        cursor: pointer;
+    }
 
     &__choose_box {
         position: absolute;
         top: 35px;
         left: -9px;
-        box-sizing: border-box;
         background: #FFF;
         box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
         padding-left: 9px;
-        padding-bottom: 2px;
         padding-top: 9px;
         padding-right: 14px;
     }
@@ -188,7 +195,7 @@
     &__lists {
         position: absolute;
         z-index: -1;
-        opacity: 0;    
+        opacity: 0;
     }
 
     &__head {
@@ -202,22 +209,22 @@
         line-height: normal;
     }
 
-    &__choose > summary {
+    &__choose>summary {
         list-style: none;
-      }
+    }
 
-    &__lists + label {
+    &__lists+label {
         display: inline-flex;
         align-items: center;
         user-select: none;
         margin-bottom: 9px;
-      }
-    
-    &__lists + label::before {
+    }
+
+    &__lists+label::before {
         content: '';
         display: inline-block;
         width: 1em;
-        height: 1em;  
+        height: 1em;
         flex-shrink: 0;
         flex-grow: 0;
         border: 1px solid #adb5bd;
@@ -226,33 +233,42 @@
         background-repeat: no-repeat;
         background-position: center center;
         background-size: 50% 50%;
-    }  
-
-    &__lists:checked + label::before {
-    border-color: $mainElementsColor;
-    background-color: $mainElementsColor;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");  
-    }
-    
-    &__lists:checked + label {
-    color: $mainElementsColor; 
     }
 
-        // ползунок
-        
+    &__lists:checked+label::before {
+        border-color: $mainElementsColor;
+        background-color: $mainElementsColor;
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+    }
+
+    &__lists:hover+label::before {
+        border-color: $mainElementsColor;
+
+    }
+
+    &__lists:checked+label {
+        color: $mainElementsColor;
+    }
+
+    // ползунок
+
     &__slider {
         -webkit-appearance: none;
-        width: 100px;
+        appearance: none;
         height: 10px;
-        background-color: #F8F3F4;;
+        background-color: #F8F3F4;
         outline: none;
-        
+        width: 150px;
     }
-    
+
     &__choose_box.specl {
         padding-bottom: 11px;
+        display: flex;
+        align-items: center;
     }
-    
+
+
+
     &__slider::-webkit-slider-thumb {
         -webkit-appearance: none;
         appearance: none;
@@ -261,8 +277,8 @@
         background-color: $mainElementsColor;
         cursor: pointer;
         border-radius: 50%;
-      }
-      
+    }
+
 }
 
 
@@ -271,7 +287,7 @@
 
 .product_switch {
     margin-top: 48px;
-    margin-bottom: 96px;    
+    margin-bottom: 96px;
 }
 
 .product_switch__list {
@@ -280,28 +296,40 @@
     justify-content: center;
     padding: 12px 16px;
     border: 1px solid #EBEBEB;
-    width: 285px;
+    width: 315px;
     margin-left: auto;
     margin-right: auto;
 
 
-    &  input {
+    &__flipper {
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        &:hover path {
+            fill: $mainElementsColor;
+        }
+    }
+
+    & input {
         -webkit-appearance: none;
         -moz-appearance: none;
         -ms-appearance: none;
         -o-appearance: none;
         appearance: none;
     }
-    
+
     &__numbers {
         display: flex;
-
         gap: 14px;
         color: #C4C4C4;
         font-size: 16px;
         font-style: normal;
         font-weight: 300;
         line-height: normal;
+
+
     }
 
     &__line_span {
@@ -310,9 +338,10 @@
         margin-right: 14px;
     }
 
-    &__numb_colored:hover + label{
+    &__numb_colored:hover+label {
         color: $mainElementsColor;
-    }
-    
-}
+        cursor: pointer;
 
+    }
+
+}
