--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,20 @@
   letter-spacing: 0em;
   text-align: left;
 }
-.new_arrivals__spec_link {
+.new_arrivals__link::after {
+  content: "/";
+  padding-left: 6px;
+}
+.new_arrivals__link:last-child {
   color: #F16D7F;
   font-size: 14px;
   font-weight: 700;
   line-height: 17px;
   letter-spacing: 0em;
   text-align: left;
+}
+.new_arrivals__link:last-child::after {
+  content: none;
 }
 
 .catalog_main_content {
@@ -116,9 +123,12 @@
   padding-right: calc(50% - 558px);
 }
 
+.for_absoluting {
+  position: relative;
+}
+
 .offer_details {
   display: flex;
-  margin-left: 30px;
   gap: 16px;
 }
 .offer_details__choose {
@@ -127,12 +137,12 @@
   padding-bottom: 64px;
   position: relative;
   z-index: 7;
+  cursor: pointer;
 }
 .offer_details__choose_box {
   position: absolute;
   top: 35px;
   left: -9px;
-  box-sizing: border-box;
   background: #FFF;
   box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
   padding-left: 9px;
@@ -189,25 +199,44 @@
   color: #F16D7F;
 }
 
-.button_bask {
+.button__bask {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background: none;
   border: 1px solid #F16D7F;
+  width: 212px;
+  height: 49px;
 }
-.button_bask__title {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-right: 57px;
+.button__bask:hover {
+  background-color: #F16D7F;
+}
+.button__bask:hover .button__bask__title {
+  color: #FFF;
+}
+.button__bask:hover .button__bask__basket path {
+  fill: #FFF;
+}
+.button__bask:active {
+  background-color: #fff;
+  border: 1px solid #F16D7F;
+}
+.button__bask:active .button__bask__title {
+  color: #F16D7F;
+}
+.button__bask:active .button__bask__basket path {
+  fill: #F16D7F;
+}
+.button__bask__title {
+  padding-right: 54px;
   color: #F16D7F;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
-.button_bask__basket {
-  padding-left: 24px;
-  margin-right: 23px;
+.button__bask__basket {
+  margin-left: 24px;
 }
 
 /* content_items */
@@ -254,13 +283,20 @@
   letter-spacing: 0em;
   text-align: left;
 }
-.new_arrivals__spec_link {
+.new_arrivals__link::after {
+  content: "/";
+  padding-left: 6px;
+}
+.new_arrivals__link:last-child {
   color: #F16D7F;
   font-size: 14px;
   font-weight: 700;
   line-height: 17px;
   letter-spacing: 0em;
   text-align: left;
+}
+.new_arrivals__link:last-child::after {
+  content: none;
 }
 
 .filtering_and_selection {
@@ -274,8 +310,8 @@
   width: 355px;
   position: relative;
   padding-top: 13px;
-  box-sizing: border-box;
   z-index: 7;
+  cursor: pointer;
 }
 .filter__content {
   background-color: #FFFFFF;
@@ -346,8 +382,10 @@
 
 .offer_details {
   display: flex;
-  margin-left: 30px;
   gap: 16px;
+}
+.offer_details.for_product {
+  margin-left: 30px;
 }
 .offer_details__choose {
   text-align: left;
@@ -355,16 +393,15 @@
   padding-bottom: 64px;
   position: relative;
   z-index: 7;
+  cursor: pointer;
 }
 .offer_details__choose_box {
   position: absolute;
   top: 35px;
   left: -9px;
-  box-sizing: border-box;
   background: #FFF;
   box-shadow: 6px 4px 35px 0px rgba(0, 0, 0, 0.21);
   padding-left: 9px;
-  padding-bottom: 2px;
   padding-top: 9px;
   padding-right: 14px;
 }
@@ -413,18 +450,25 @@
   background-color: #F16D7F;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
+.offer_details__lists:hover + label::before {
+  border-color: #F16D7F;
+}
 .offer_details__lists:checked + label {
   color: #F16D7F;
 }
 .offer_details__slider {
   -webkit-appearance: none;
-  width: 100px;
+  -moz-appearance: none;
+       appearance: none;
   height: 10px;
   background-color: #F8F3F4;
   outline: none;
+  width: 150px;
 }
 .offer_details__choose_box.specl {
   padding-bottom: 11px;
+  display: flex;
+  align-items: center;
 }
 .offer_details__slider::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -447,9 +491,15 @@
   justify-content: center;
   padding: 12px 16px;
   border: 1px solid #EBEBEB;
-  width: 285px;
+  width: 315px;
   margin-left: auto;
   margin-right: auto;
+}
+.product_switch__list__flipper:hover {
+  cursor: pointer;
+}
+.product_switch__list__flipper:hover path {
+  fill: #F16D7F;
 }
 .product_switch__list input {
   -webkit-appearance: none;
@@ -473,6 +523,7 @@
 }
 .product_switch__list__numb_colored:hover + label {
   color: #F16D7F;
+  cursor: pointer;
 }
 
 /* top */
@@ -716,6 +767,11 @@
   background-color: #F16D7F;
   color: #FFF;
 }
+.explore__button:active {
+  background-color: #fff;
+  color: #F16D7F;
+  border: 1px solid #F16D7F;
+}
 
 /* company_advantages */
 .advantages {
@@ -829,6 +885,13 @@
   border: none;
   padding-left: 22px;
 }
+.subscription__approval__email:hover {
+  border-color: #F16D7F;
+}
+.subscription__approval__email:focus {
+  border-color: #F16D7F;
+  outline: 1px solid #F16D7F;
+}
 .subscription__approval__button {
   margin-top: 39px;
   float: left;
@@ -843,6 +906,16 @@
   font-weight: 400;
   line-height: normal;
   border: none;
+}
+.subscription__approval__button:hover {
+  cursor: pointer;
+  border: 1px solid #fff;
+  color: #fff;
+}
+.subscription__approval__button:active {
+  background-color: #fff;
+  color: #F16D7F;
+  border: 1px solid #F16D7F;
 }
 
 /* TABLET */
@@ -981,7 +1054,8 @@
     margin-top: 25px;
     margin-bottom: 26px;
   }
-  .basket_shower__icon, .header__right_nav__person_icon {
+  .basket_shower__icon,
+  .header__right_nav__person_icon {
     display: none;
   }
   .top {
@@ -1196,9 +1270,266 @@
   text-align: left;
 }
 
+.under_head {
+  background-color: #F8F3F4;
+}
+.under_head__title {
+  color: #F16D7F;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-top: 59px;
+  padding-bottom: 60px;
+}
+
+.left_basked_side {
+  width: 652px;
+}
+
+.preparation_for_purchase {
+  display: flex;
+  justify-content: space-between;
+}
+
+.basket_goods_list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  padding-top: 96px;
+  padding-bottom: 72px;
+}
+
+.basket_item {
+  display: flex;
+  box-shadow: 17px 19px 24px 0px rgba(0, 0, 0, 0.1294117647);
+}
+.basket_item figcaption {
+  color: #222;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.basket_item__description {
+  box-sizing: border-box;
+  padding: 22px 22px 62px 31px;
+  width: 100%;
+}
+.basket_item__description__top_part {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 42px;
+}
+.basket_item__description__bottom_part {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+.basket_item__product_characteristics {
+  color: #575757;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.basket_item__basket_price {
+  color: #F16D7F;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.basket_item__cross {
+  padding-top: 6px;
+}
+.basket_item__cross:hover {
+  cursor: pointer;
+}
+.basket_item__cross:hover path {
+  fill: #F16D7F;
+}
+.basket_item__window_count {
+  border: 1px solid #EAEAEA;
+  text-align: right;
+  width: 44px;
+  height: 25px;
+  color: #656565;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 24px;
+}
+.basket_item__window_count:focus {
+  color: #F16D7F;
+  border-color: #F16D7F;
+  outline: 1px solid #F16D7F;
+}
+
+.basket_menu {
+  margin-bottom: 144px;
+  display: flex;
+  justify-content: space-between;
+  max-width: 670px;
+}
+.basket_menu__options {
+  padding: 17px 40px;
+  border: 1px solid #A4A4A4;
+  color: #000;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.basket_menu__options:hover {
+  cursor: pointer;
+  border-color: #F16D7F;
+  color: #F16D7F;
+}
+.basket_menu__options:active {
+  background-color: #F16D7F;
+  color: #fff;
+}
+
+.right_basket_side {
+  width: 360px;
+}
+
+.shipping_select {
+  padding-top: 113px;
+  padding-bottom: 57px;
+}
+.shipping_select__title {
+  color: #222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-bottom: 21px;
+}
+.shipping_select__box {
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+  transition-duration: all 2s;
+}
+.shipping_select__field {
+  border: 1px solid #A4A4A4;
+  color: #222;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  padding-left: 17px;
+  height: 45px;
+  box-sizing: border-box;
+}
+.shipping_select__field:hover {
+  border-color: #F16D7F;
+}
+.shipping_select__field:focus {
+  border-color: #F16D7F;
+  outline: 1px solid #F16D7F;
+}
+.shipping_select__field.field1::-moz-placeholder {
+  color: #B1B1B1;
+}
+.shipping_select__field.field1::placeholder {
+  color: #B1B1B1;
+}
+.shipping_select__button {
+  width: 101px;
+  height: 35px;
+  color: #4A4A4A;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  background-color: #fff;
+  border: 1px solid #A4A4A4;
+}
+.shipping_select__button:hover {
+  cursor: pointer;
+  border-color: #F16D7F;
+  color: #F16D7F;
+}
+.shipping_select__button:active {
+  background-color: #F16D7F;
+  color: #fff;
+}
+
+.total_amount {
+  background-color: #F5F3F3;
+  display: flex;
+  flex-direction: column;
+}
+.total_amount__content {
+  padding: 40px 34px 58px 34px;
+}
+.total_amount__top_part {
+  display: flex;
+  flex-direction: column;
+  align-items: normal;
+  text-align: right;
+}
+.total_amount__top_part__subtitle {
+  color: #4A4A4A;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.total_amount__top_part__title {
+  color: #222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.total_amount__top_part__title span {
+  color: #F16D7F;
+  font-weight: 700;
+}
+.total_amount__top_part span {
+  margin-left: 20px;
+}
+.total_amount__checkout_button {
+  padding: 15px 42px;
+  background-color: #F16D7F;
+  text-align: center;
+  color: #FFF;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.total_amount__checkout_button:hover {
+  cursor: pointer;
+  border: 1px solid #fff;
+  color: #fff;
+}
+.total_amount__checkout_button:active {
+  background-color: #fff;
+  color: #F16D7F;
+  border: 1px solid #F16D7F;
+}
+.total_amount__bottom_part {
+  width: 277px;
+  margin: 0 auto;
+}
+.total_amount__bottom_part hr {
+  margin-top: 21px;
+  margin-bottom: 32px;
+  border: 0;
+  height: 1px;
+  background-color: #E2E2E2;
+}
+
 * {
   margin: 0%;
   padding: 0%;
+  box-sizing: border-box;
 }
 
 html {
@@ -1263,6 +1594,7 @@ img {
 }
 .header__right_nav__special_img {
   padding-top: 4px;
+  cursor: pointer;
 }
 .header__right_nav__person_icon {
   margin-left: 25px;
@@ -1343,6 +1675,9 @@ img {
   line-height: normal;
   margin-bottom: 11px;
   padding-left: 54px;
+}
+.header_menu__section_subtitle:hover {
+  color: #F16D7F;
 }
 
 #burger {
