--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -3,3 +3,5 @@ $backColor: #F8F3F4;
 $widthBurgerMenu: 232px;
 
 $basketItemSize: 670px;
+$onePartOfSecurityPageSize: 652px;
+$secondPartOfSecurityPageSize: 360px;
