--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 @import 'catalog';
 @import 'product_presentation';
 @import 'index';
-@import 'basket';
+@import 'basket+registration';
 
 * {
     margin: 0%;
