--- a/css/_basket+registration.scss
+++ b/css/_basket+registration.scss
@@ -22,7 +22,7 @@
 //            left_basked_side
 
 .left_basked_side {
-    @include left_basket_part_size;
+    width: $onePartOfSecurityPageSize;
 }
 
 .preparation_for_purchase {
@@ -150,14 +150,12 @@
 // shipping_select
 
 .right_basket_side {
-    @include right_basket_part_size;
+    width: $secondPartOfSecurityPageSize;
 }
 
 .shipping_select {
     padding-top: 113px;
     padding-bottom: 57px;
-
-
 
     &__title {
         color: #222;
@@ -184,7 +182,6 @@
         line-height: normal;
         padding-left: 17px;
         height: 45px;
-        box-sizing: border-box;
 
         @include fields_hover_and_focus;
 
@@ -204,9 +201,7 @@
         background-color: #fff;
         border: 1px solid #A4A4A4;
         @include buttons_hover_and_active;
-
     }
-
 }
 
 
@@ -216,7 +211,6 @@
     background-color: #F5F3F3;
     display: flex;
     flex-direction: column;
-
 
     &__content {
         padding: 40px 34px 58px 34px;
@@ -278,7 +272,160 @@
             background-color: #E2E2E2;
         }
     }
+}
 
 
+
+
+
+
+//                                 registration page
+
+
+
+
+
+.registration {
+    display: flex;
+
+    gap: 128px;
+
+    &__title {
+        color: #222;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+    }
+
+    &__data {
+        border: 1px solid #A4A4A4;
+        color: #222;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+        padding-left: 17px;
+        height: 45px;
+        transition-property: 0.5s all;
+        transition-duration: 0.5s all;
+        @include fields_hover_and_focus;
+
+
+        &::placeholder {
+            color: #B1B1B1;
+        }
+
+    }
+
+    &__subtitle {
+        color: #B1B1B1;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+    }
+
+    &__required {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        color: #000;
+        font-size: 11px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+
+    }
+
+    &__radio {
+        margin-right: 5px;
+        vertical-align: top;
+    }
+
+    &__radio:checked {
+        accent-color: $mainElementsColor;
+
+
+    }
+
+
+    // input[required]:not(:checked) {
+    //     outline: 2px solid red;
+    // }
+
+    &__approval {
+        width: 167px;
+        height: 50px;
+        background-color: $mainElementsColor;
+        color: #FFF;
+        text-align: center;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+        border: none;
+        transition-property: 0.5s all;
+        transition-duration: 0.5s all;
+        hw3AdvansedHtml- @include reverse_buttons_hover_and_active;
+
+        &_arrow {
+            margin-left: 20px;
+        }
+
+        &:active path {
+            fill: $mainElementsColor;
+        }
+    }
+
+}
+
+.left_side {
+
+    width: $secondPartOfSecurityPageSize;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    &_padding {
+        padding-top: 64px;
+        padding-bottom: 96px;
+    }
+}
+
+#sex2 {
+    margin-left: 20px;
+}
+
+
+.right_side {
+    max-width: $onePartOfSecurityPageSize;
+    display: flex;
+    flex-direction: column;
+    gap: 21px;
+
+    &_padding {
+        padding-top: 64px;
+
+    }
+
+    &__title {
+        color: #000;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: normal;
+    }
+
+    &__list {
+        list-style-type: none;
+
+        &_li {
+            padding-left: 43px;
+            margin-bottom: 16px;
+            background-image: url(../img/check_mark.svg);
+            background-repeat: no-repeat;
+            background-position: left center;
+        }
+    }
 
 }
