--- a/css/style.css
+++ b/css/style.css
@@ -1423,7 +1423,6 @@
   line-height: normal;
   padding-left: 17px;
   height: 45px;
-  box-sizing: border-box;
 }
 .shipping_select__field:hover {
   border-color: #F16D7F;
@@ -1524,6 +1523,134 @@
   border: 0;
   height: 1px;
   background-color: #E2E2E2;
+}
+
+.registration {
+  display: flex;
+  gap: 128px;
+}
+.registration__title {
+  color: #222;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.registration__data {
+  border: 1px solid #A4A4A4;
+  color: #222;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  padding-left: 17px;
+  height: 45px;
+}
+.registration__data:hover {
+  border-color: #F16D7F;
+}
+.registration__data:focus {
+  border-color: #F16D7F;
+  outline: 1px solid #F16D7F;
+}
+.registration__data::-moz-placeholder {
+  color: #B1B1B1;
+}
+.registration__data::placeholder {
+  color: #B1B1B1;
+}
+.registration__subtitle {
+  color: #B1B1B1;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.registration__required {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #000;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.registration__radio {
+  margin-right: 5px;
+  vertical-align: top;
+}
+.registration__radio:checked {
+  accent-color: #F16D7F;
+}
+.registration__approval {
+  width: 167px;
+  height: 50px;
+  background-color: #F16D7F;
+  color: #FFF;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border: none;
+}
+.registration__approval:hover {
+  cursor: pointer;
+  border: 1px solid #fff;
+  color: #fff;
+}
+.registration__approval:active {
+  background-color: #fff;
+  color: #F16D7F;
+  border: 1px solid #F16D7F;
+}
+.registration__approval_arrow {
+  margin-left: 20px;
+}
+.registration__approval:active path {
+  fill: #F16D7F;
+}
+
+.left_side {
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.left_side_padding {
+  padding-top: 64px;
+  padding-bottom: 96px;
+}
+
+#sex2 {
+  margin-left: 20px;
+}
+
+.right_side {
+  max-width: 652px;
+  display: flex;
+  flex-direction: column;
+  gap: 21px;
+}
+.right_side_padding {
+  padding-top: 64px;
+}
+.right_side__title {
+  color: #000;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+.right_side__list {
+  list-style-type: none;
+}
+.right_side__list_li {
+  padding-left: 43px;
+  margin-bottom: 16px;
+  background-image: url(../img/check_mark.svg);
+  background-repeat: no-repeat;
+  background-position: left center;
 }
 
 * {
