--- a/css/_index.scss
+++ b/css/_index.scss
@@ -3,6 +3,7 @@
 
 
 
+
 /* top */
 
 .top {
@@ -149,16 +150,17 @@
     gap: 30px;
 }
 
+
 .content_bgc {
     background-color: #F8F8F8;
 }
 
 
 .item_text {
-    padding-left: 16px;
+    padding-left: 18px;
     padding-top: 24px;
-    padding-bottom: 24px;
-    padding-right: 16px;
+    padding-bottom: 20px;
+    padding-right: 29px;
 
     &__title {
         color: #000;
@@ -170,8 +172,8 @@
     }
 
     &__subtitle {
-        margin-top: 16px;
-        margin-bottom: 16px;
+        margin-top: 12px;
+        margin-bottom: 18px;
         color: #5D5D5D;
         font-size: 14px;
         font-style: normal;
@@ -202,12 +204,16 @@
         align-items: center;
         border-color: #FFFFFF;
         background: none;
-    }
 
-    &__basket img {
-        padding-top: 11.2px;
-        padding-bottom: 8.7px;
-        padding-left: 13.5px;
+        &:hover {
+            cursor: pointer;
+        }
+
+        & img {
+            padding-top: 11.2px;
+            padding-bottom: 8.7px;
+            padding-left: 13.5px;
+        }
     }
 
     &__title {
@@ -221,19 +227,21 @@
     }
 }
 
-.button_place:hover .item_image {
-    filter: brightness(0.5);
-}
+// .button_place:hover~.item_image img {
+//     filter: brightness(0.3);
+// }
 
 .item_image:hover {
-    filter: brightness(0.5);
+    filter: brightness(0.3);
 }
 
 .pseudo:hover .button_place {
     opacity: 1;
     top: 44%;
     left: 32%;
+
 }
+
 
 
 .explore {
@@ -329,7 +337,7 @@
 /* subscription */
 
 .subscription {
-    background: url(../img/photo_subscribe.jpg) no-repeat;
+    background: url(/img/photo_subscribe.jpg) no-repeat;
     background-position: 50%;
     background-size: cover;
     height: 448px;
@@ -417,476 +425,4 @@
             @include reverse_buttons_hover_and_active;
         }
     }
-}
-
-
-
-
-/* TABLET */
-
-
-
-
-@media (min-width: 726px) and (max-width: 1024px) {
-
-    .center {
-        padding-left: calc(50% - 367px);
-        padding-right: calc(50% - 367px);
-    }
-
-    .header {
-        padding-left: calc(50% - 351.5px);
-        padding-right: calc(50% - 342.5px);
-
-        &__right_nav {
-            margin-top: 27px;
-            margin-bottom: 18px;
-        }
-    }
-
-    .top {
-        padding-left: calc(50% - 367px);
-        padding-right: calc(50% - 367px);
-        max-height: 384px;
-
-        &__brand_info {
-            float: right;
-            width: 50%;
-            display: flex;
-            align-self: center;
-            padding-top: 138px;
-            padding-left: 67px;
-            padding-bottom: 151.5px;
-        }
-    }
-
-
-    .top_text {
-        &__top_title {
-            font-size: 44px;
-        }
-
-        &__top_subtitle {
-            font-size: 24px;
-        }
-    }
-
-
-    .content_photo {
-        margin-top: 65px;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 20px;
-        margin-bottom: 110px;
-    }
-
-    .titled_block {
-        margin-bottom: 73.7px;
-        display: flex;
-        flex-direction: column;
-
-        &__title {
-            margin-bottom: 3.3px;
-        }
-
-    }
-
-
-    .content_items {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 30px;
-    }
-
-
-    .item_text {
-        padding-left: 16.5px;
-        padding-top: 25px;
-        padding-bottom: 29px;
-        padding-right: 16px;
-
-        &__subtitle {
-            margin-top: 12px;
-            margin-bottom: 18px;
-        }
-    }
-
-
-    .explore__button {
-        margin-top: 32.5px;
-        margin-bottom: 70.5px;
-    }
-
-
-    .advantages {
-        &.center {
-            padding-left: calc(50% - 180px);
-            padding-right: calc(50% - 180px);
-        }
-
-        &__item {
-            padding-top: 0;
-            padding-bottom: 0;
-        }
-
-        &__subtitle {
-            font-size: 13.972px;
-            font-style: normal;
-            font-weight: 300;
-            line-height: normal;
-            max-width: 310px;
-        }
-
-    }
-
-
-    .middling {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: center;
-        gap: 48.5px;
-        padding-top: 48.1px;
-        padding-bottom: 64px;
-    }
-
-
-    .subscription {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: center;
-        height: 693px;
-        background-position: 25%;
-        background-size: 286% 130%;
-
-        &.center {
-            padding-left: calc(50% - 228.5px);
-            padding-right: calc(50% - 228.5px);
-        }
-
-        &__invitation {
-            padding-bottom: 0px;
-            margin-bottom: 48px;
-        }
-
-        &__approval {
-            padding-right: 0;
-            padding-bottom: 140px;
-        }
-    }
-
-
-    .footer {
-        padding-left: calc(50% - 352px);
-        padding-right: calc(50% - 352px);
-    }
-
-    .socials {
-        padding-top: 23px;
-        padding-bottom: 24px;
-    }
-
-}
-
-
-
-/* PHONE */
-
-
-
-@media (min-width: 320px) and (max-width: 767px) {
-
-    .header {
-        padding-left: calc(50% - 148px);
-        padding-right: calc(50% - 148px);
-
-        &__left_nav {
-            margin-top: 18px;
-            margin-bottom: 18px;
-        }
-
-        &__right_nav {
-            margin-top: 25px;
-            margin-bottom: 26px;
-        }
-    }
-
-    .basket_shower__icon,
-    .header__right_nav__person_icon {
-        display: none;
-    }
-
-
-    .top {
-        padding-left: calc(50% - 148px);
-        padding-right: calc(50% - 148px);
-        margin: auto;
-        min-height: 363px;
-
-        &__brand_image {
-            display: none;
-        }
-
-        &__brand_info {
-            padding-left: 0;
-            padding-top: 0;
-            padding-bottom: 0;
-            float: none;
-            width: 100%;
-            justify-content: center;
-        }
-    }
-
-    .top_text {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        align-items: flex-start;
-        justify-content: center;
-
-        &__title {
-            font-size: 38px;
-            font-style: normal;
-            font-weight: 900;
-            line-height: normal;
-            font-weight: bold;
-        }
-
-        &__subtitle {
-            font-size: 20px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: normal;
-        }
-
-    }
-
-
-    .content_photo {
-        margin-top: 64px;
-        display: flex;
-        flex-direction: column;
-        gap: 32px;
-        margin-bottom: 64px;
-
-        &.center {
-            padding-left: calc(50% - 140px);
-            padding-right: calc(50% - 140px);
-        }
-
-        &__photo1 {
-            height: 247px;
-        }
-
-        &__photo2 {
-            height: 249px;
-        }
-
-        &__photo3 {
-            height: 248px;
-        }
-
-        &__photo4 {
-            height: 111px;
-        }
-
-    }
-
-    .titled_block {
-        margin-bottom: 64px;
-    }
-
-    .content_items {
-        display: flex;
-        flex-direction: column;
-        gap: 16px;
-
-        &.center {
-            padding-left: calc(50% - 148px);
-            padding-right: calc(50% - 148px);
-        }
-    }
-
-    .item_text {
-        padding-left: 16px;
-        padding-top: 24px;
-        padding-bottom: 20px;
-        padding-right: 28px;
-    }
-
-    .explore__button {
-        margin-top: 40.6px;
-        margin-bottom: 96px;
-    }
-
-    .basket_shower__counter {
-        display: none;
-    }
-
-
-    .advantages {
-        &.center {
-            padding-left: calc(50% - 152px);
-            padding-right: calc(50% - 152px);
-        }
-
-        &__item {
-            padding-top: 0;
-            padding-bottom: 0;
-        }
-
-        &__title {
-            margin-bottom: 14.6px;
-        }
-
-        &__subtitle {
-            color: #FBFBFB;
-            text-align: center;
-            font-size: 13.972px;
-            font-style: normal;
-            font-weight: 300;
-            line-height: normal;
-            max-width: 310px;
-        }
-
-        &__icon1 {
-            margin-bottom: 27px;
-        }
-
-        &__icon2 {
-            margin-bottom: 18px;
-        }
-
-        &__icon3 {
-            margin-bottom: 24px;
-        }
-    }
-
-
-    .middling {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: center;
-        gap: 46.7px;
-        padding-top: 48px;
-        padding-bottom: 81px;
-    }
-
-
-    .subscription {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: center;
-        height: 693px;
-        background-position: 29%;
-        background-size: 343% 100%;
-
-        &.center {
-            padding-left: calc(50% - 174.5px);
-            padding-right: calc(50% - 174.5px);
-        }
-
-        &__invitation {
-            padding-bottom: 0;
-            margin-bottom: 59px;
-        }
-
-        &__approval {
-            padding-right: 0;
-            padding-bottom: 110px;
-
-            &__email {
-                height: 47px;
-                width: 216px;
-                margin-top: 22px;
-            }
-
-            &__button {
-                height: 47px;
-                width: 75px;
-                margin-top: 22px;
-            }
-        }
-    }
-
-
-    .footer {
-        padding-left: calc(50% - 140px);
-        padding-right: calc(50% - 140px);
-        display: flex;
-        flex-direction: column-reverse;
-        flex-wrap: wrap;
-
-        &__all_rights {
-            padding-bottom: 9px;
-        }
-
-        &__socials {
-            padding-top: 43px;
-            padding-bottom: 0;
-            margin-bottom: 40px;
-        }
-    }
-}
-
-
-
-
-
-
-
-
-
-.new_arrivals {
-    display: flex;
-    justify-content: space-between;
-    background-color: #F8F3F4;
-
-    &.center {
-        padding-left: calc(50% - 558px);
-        padding-right: calc(50% - 558px);
-    }
-
-    &__title {
-        color: $mainElementsColor;
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
-
-    &__bread_crumbs {
-        display: flex;
-        gap: 5px;
-        font-size: 14px;
-        font-weight: 300;
-        line-height: 17px;
-        letter-spacing: 0em;
-        text-align: left;
-        padding-top: 65px;
-        padding-bottom: 65px;
-    }
-
-    &__link {
-        color: #636363;
-        font-size: 14px;
-        font-weight: 300;
-        line-height: 17px;
-        letter-spacing: 0em;
-        text-align: left;
-
-
-    }
-
-    &__spec_link {
-        color: $mainElementsColor;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 17px;
-        letter-spacing: 0em;
-        text-align: left;
-
-    }
-
 }
