--- a/css/_index_adaptive.scss
+++ b/css/_index_adaptive.scss
@@ -93,7 +93,7 @@
 
 
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (max-width: 767px) {
 
     .top {
         padding-left: calc(50% - 148px);
