--- a/css/_product_presentation_adaptive.scss
+++ b/css/_product_presentation_adaptive.scss
@@ -68,7 +68,7 @@
 
 
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (max-width: 767px) {
 
     .new_arrivals {
         flex-wrap: wrap;
